--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -45,7 +45,7 @@
 
 
     <div class="container-fluid text-center">
-        <img th:src="@{/images/logo.png}" alt="logo de l'application">
+        <img th:src="@{/images/logo.png}" alt="logo de l'application" id="logo-dashboard">
     </div>
 
     </main>
