reprise bouton valider edit_restaurant

--- a/src/main/resources/templates/edit_restaurant.html
+++ b/src/main/resources/templates/edit_restaurant.html
@@ -180,7 +180,7 @@
       </div>
 
       <!-- Colonne droite : bouton valider -->
-      <div class="col-md-12 col-lg-4 d-flex flex-column col-valider">
+      <div class="col-md-12 col-lg-4 d-flex flex-column col-valider align-items-center">
         <button type="submit" class="btn btn-valider">Valider les modifications</button>
       </div>
     </div>
